Basic header styling

--- a/app/index.html
+++ b/app/index.html
@@ -21,9 +21,10 @@
     <![endif]-->
 
     <!-- Add your site or application content here -->
+
     <div class="header">
       <div class="navbar navbar-default" role="navigation">
-        <div class="container">
+        <div class="container-fluid">
           <div class="navbar-header">
 
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#js-navbar-collapse">
@@ -33,16 +34,19 @@
               <span class="icon-bar"></span>
             </button>
 
-            <a class="navbar-brand" href="#/">live</a>
+            <a class="navbar-brand" href="#/"><img src='/../../images/live-logo.png'></a>
           </div>
 
-          <div class="collapse navbar-collapse" id="js-navbar-collapse">
-
+          <div class="collapse navbar-collapse pull-right" id="js-navbar-collapse">
+            <h3>
             <ul class="nav navbar-nav">
-              <li class="active"><a href="#/">Home</a></li>
-              <li><a ng-href="#/about">About</a></li>
-              <li><a ng-href="#/">Contact</a></li>
+              <li><a href="#/">arte</a></li>
+              <li><a ng-href="#/">música</a></li>
+              <li><a ng-href="#/">cine</a></li>
+              <li><a ng-href="#/">eventos</a></li>
+              <li><a ng-href="#/">noticias</a></li>
             </ul>
+            </h3>
           </div>
         </div>
       </div>
