--- a/app/index.html
+++ b/app/index.html
@@ -22,43 +22,67 @@
 
     <!-- Add your site or application content here -->
 
+
     <div class="header">
+          <div class='logo'>
+      <a href ng-click="tab = 0"><img src='/../../images/live-logo.png' height="80" width="auto"></a>
+    </div>
       <div class="navbar navbar-default" role="navigation">
         <div class="container-fluid">
           <div class="navbar-header">
-
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#js-navbar-collapse">
               <span class="sr-only">Toggle navigation</span>
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-
-            <a class="navbar-brand" href="#/"><img src='/../../images/live-logo.png'></a>
           </div>
-
-          <div class="collapse navbar-collapse pull-right" id="js-navbar-collapse">
+          <div class="collapse navbar-collapse" id="js-navbar-collapse">
             <h3>
-            <ul class="nav navbar-nav">
-              <li><a href="#/">arte</a></li>
-              <li><a ng-href="#/">música</a></li>
-              <li><a ng-href="#/">cine</a></li>
-              <li><a ng-href="#/">eventos</a></li>
-              <li><a ng-href="#/">noticias</a></li>
+            <ul class="nav navbar-nav" ng-init="tab = 0">
+              <li>
+                <a href ng-click="tab = 1">ARTE</a>
+              </li>
+              <li>
+                <a href ng-click="tab = 2">MÚSICA</a>
+              </li>
+              <li>
+                <a href ng-click="tab = 3">CINE</a>
+              </li>
+              <li>
+                <a href ng-click="tab = 4">EVENTOS</a>
+              </li>
+              <li>
+                <a href ng-click="tab = 5">NOTICIAS</a>
+              </li>
             </ul>
             </h3>
           </div>
+
         </div>
+      <hr>
       </div>
     </div>
 
-    <div class="container">
+  <br>
+  <br>
+<!--
+  <p ng-show="tab === 1 || tab === 0">Tab 1 Showing</p>
+  <p ng-show="tab === 2 || tab === 0">Tab 2 Showing</p>
+  <p ng-show="tab === 3 || tab === 0">Tab 3 Showing</p>
+  <p ng-show="tab === 4 || tab === 0">Tab 4 Showing</p>
+  <p ng-show="tab === 5 || tab === 0">Tab 5 Showing</p>
+-->
+  </section> 
+
+
+    <div class="container-fluid">
     <div ng-view=""></div>
     </div>
 
     <div class="footer">
       <div class="container">
-        <p><span class="glyphicon glyphicon-heart"></span> from the Yeoman team</p>
+        <p><span class="glyphicon glyphicon-heart"></span> from Live Sevilla</p>
       </div>
     </div>
 
